--- a/samples/PanoramaSample.html
+++ b/samples/PanoramaSample.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <!-- Copyright © 2013 Ryan Watkins ryan@ryanwatkins.net -->
   <title>Panorama Sample</title>
-  <!-- -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- -->
   <script src="../../enyo/enyo/enyo.js" type="text/javascript"></script>
   <script src="../../enyo/layout/package.js" type="text/javascript"></script>
